--- a/Resources/data/WeaponData.plist
+++ b/Resources/data/WeaponData.plist
@@ -7,7 +7,13 @@
       <key>GapTime</key>
       <real>0.5</real>
       <key>Name</key>
-      <string>Weapon</string>
+      <string>Shotgun</string>
+      <key>weaponType</key>
+      <string>Shotgun</string>
+      <key>SizeX</key>
+      <integer>130</integer>
+      <key>SizeY</key>
+      <integer>5</integer>
       <key>PowerCost</key>
       <integer>3</integer>
       <key>BulletData</key>
@@ -21,7 +27,13 @@
       <key>GapTime</key>
       <real>0.5</real>
       <key>Name</key>
-      <string>Weapon</string>
+      <string>Redgun</string>
+      <key>weaponType</key>
+      <string>SingleShotgun</string>
+      <key>SizeX</key>
+      <integer>70</integer>
+      <key>SizeY</key>
+      <integer>8</integer>
       <key>PowerCost</key>
       <integer>2</integer>
       <key>BulletData</key>
@@ -29,13 +41,19 @@
         <key>Damage</key>
         <integer>5</integer>
       </dict>
-    </dict>
+  </dict>
     <key>Pistol</key>
     <dict>
       <key>GapTime</key>
       <real>0.3</real>
       <key>Name</key>
-      <string>Weapon</string>
+      <string>Pistol</string>
+      <key>weaponType</key>
+      <string>SingleShotgun</string>
+      <key>SizeX</key>
+      <integer>70</integer>
+      <key>SizeY</key>
+      <integer>10</integer>
       <key>PowerCost</key>
       <integer>0</integer>
       <key>BulletData</key>
@@ -49,7 +67,11 @@
       <key>GapTime</key>
       <real>0.3</real>
       <key>Name</key>
-      <string>Weapon</string>
+      <string>Lightsaber</string>
+      <key>weaponType</key>
+      <string>MeleeWeapon</string>
+      <ket>Scale</ket>
+      <real>0.6</real>
       <key>PowerCost</key>
       <integer>2</integer>
       <key>BulletData</key>
@@ -63,7 +85,11 @@
       <key>GapTime</key>
       <real>0.7</real>
       <key>Name</key>
-      <string>Weapon</string>
+      <string>Hatchet</string>
+      <key>weaponType</key>
+      <string>MelleWeapon</string>
+      <ket>Scale</ket>
+      <real>0.7</real>
       <key>PowerCost</key>
       <integer>2</integer>
       <key>BulletData</key>
@@ -77,7 +103,13 @@
       <key>GapTime</key>
       <real>0.15</real>
       <key>Name</key>
-      <string>Weapon</string>
+      <string>Machinegun</string>
+      <key>weaponType</key>
+      <string>SingleShotgun</string>
+      <key>SizeX</key>
+      <integer>70</integer>
+      <key>SizeY</key>
+      <integer>6</integer>
       <key>PowerCost</key>
       <integer>1</integer>
       <key>BulletData</key>
@@ -85,6 +117,7 @@
         <key>Damage</key>
         <integer>2</integer>
       </dict>
-    </dict>
+    
+  </dict>
   </dict>
 </plist>
