--- a/proj.win32/SoulKnight.vcxproj
+++ b/proj.win32/SoulKnight.vcxproj
@@ -159,9 +159,12 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClCompile Include="..\Classes\Actor\RecoverProp.cpp" />
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\Component\State.cpp" />
+    <ClCompile Include="..\Classes\PauseLayer.cpp" />
+    <ClCompile Include="..\Classes\Scene\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\Scene\MainScene.cpp" />
     <ClCompile Include="..\Classes\Scene\MapLayer.cpp" />
     <ClCompile Include="..\Classes\Scene\PauseLayer.cpp" />
+    <ClCompile Include="..\Classes\Scene\PauseScene.cpp" />
     <ClCompile Include="..\Classes\Scene\StartGameScene.cpp" />
     <ClCompile Include="..\Classes\Weapon\Weapon.cpp" />
     <ClCompile Include="..\Classes\Weapon\MeleeWeapon.cpp" />
@@ -181,9 +184,12 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)\Resources\" /D /E /I /F /Y
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\Component\Constant.h" />
     <ClInclude Include="..\Classes\Component\State.h" />
+    <ClInclude Include="..\Classes\PauseLayer.h" />
+    <ClInclude Include="..\Classes\Scene\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\Scene\MainScene.h" />
     <ClInclude Include="..\Classes\Scene\MapLayer.h" />
     <ClInclude Include="..\Classes\Scene\PauseLayer.h" />
+    <ClInclude Include="..\Classes\Scene\PauseScene.h" />
     <ClInclude Include="..\Classes\Scene\StartGameScene.h" />
     <ClInclude Include="..\Classes\Weapon\Weapon.h" />
     <ClInclude Include="..\Classes\Weapon\MeleeWeapon.h" />
