--- a/Resources/data/BulletDefaultData.plist
+++ b/Resources/data/BulletDefaultData.plist
@@ -7,7 +7,9 @@
       <key>Name</key>
       <string>Bullet</string>
       <key>CanBeHurt</key>
-      <boolean>true</boolean>
+      <true></true>
+      <key>HP</key>
+      <integer>1</integer>
       <key>LocalZOrder</key>
       <integer>6</integer>
     </dict>
@@ -18,11 +20,11 @@
       <key>Name</key>
       <string>Bullet</string>
       <key>CategoryBitmask</key>
-      <integer>64</integer>
+      <integer>1</integer>
       <key>CollisionBitmask</key>
-      <integer>0</integer>
+      <integer>62</integer>
       <key>ContactTestBitmask</key>
-      <integer>2</integer>
+      <integer>190</integer>
       <key>Dynamic</key>
       <true></true>
       <key>RotationEnable</key>
