Some changes for weapondata
including position，anchorpoint，defaultweapon

--- a/Resources/data/HeroData.plist
+++ b/Resources/data/HeroData.plist
@@ -58,7 +58,7 @@
         <real>0</real>
       </dict>
       <key>defaultWeapon</key>
-      <string>Shotgun</string>
+      <string>Pistol</string>
     </dict>
     <key>Enchanter</key>
     <dict>
